# magicblock-crank-debug

./: README.md  package.json
crank/: package.json
dev/localnet/: .gitignore  localnet.sh  package.json
dev/magicblock/: .gitignore  package.json
dev/solana/: Anchor.toml  package.json
dev/solana/crank/: Anchor.toml
dev/solana/crank/programs/crank/: Cargo.toml
dev/solana/programs/crank/: Cargo.toml
dev/solana/programs/crank/src/: lib.rs
dev/solana/tests/: crank.ts
dev/web/: package.json
dev/web/anchor/: crank.json  crank.ts
dev/web/app/: layout.tsx  page.tsx
dev/web/components/: provider.tsx
localnet/: localnet.sh
magicblock/: er.sh
solana/crank/programs/crank/src/: lib.rs
solana/crank/tests/: crank.ts
