[package]
name = "crank"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "crank"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
bincode = "1.3.3"
ephemeral-rollups-sdk =  { version = "0.7.2", features = ["anchor", "disable-realloc"] }
magicblock-magic-program-api = { version = "0.3.1", default-features = false }
sha2 = "0.10.9"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
